--- a/src/pages/my-visit/my-visit.scss
+++ b/src/pages/my-visit/my-visit.scss
@@ -1,326 +1,302 @@
 page-my-visit {
-
-// HEADER SECTION //
-// AGENDA VIEW SECTION //
-
-.mainContainer{
-    float: left !important;
-    width: 100%;
-    padding: 0  0px  !important;
-    margin: 0 auto;
-    top: 0px !important;
+    *{
+        padding: 0;
+        margin: 0;
+        font-family: 'Segoe UI';
+   }
+    // HEADER SECTION // // AGENDA VIEW SECTION // 
+    .mainContainer{
+        float: left !important;
+        width: 100%;
+        padding: 0 0px !important;
+        margin: 0 auto;
+        top: 0px !important;
+   }
+    .container{
+        padding: 0 !important;
+        width: 94%;
+        box-shadow: 0px 0 10px 1px gainsboro;
+        border-radius: 2px;
+        margin: 10px auto;
+        border-radius: 7px;
+   }
+    .subHeader{
+        min-height: 31px;
+        min-width: 100%;
+   }
+    .button-clear{
+        font-size: 20px;
+        margin: 20px 0 !important;
+        line-height: 1;
+        color: #000;
+        font-family: 'Segoe UI';
+        font-weight: normal;
+        padding: 0px 0px 0 0 !important;
+   }
+    .button-clear i{
+        font-size: 20px;
+        margin:0 10px 0 10px;
+        color: #00677f;
+        font-weight: lighter;
+   }
+    .locationDetails{
+        background: #2b2825;
+        margin: 0px 10px;
+        border-radius: 7px;
+        font-size: 15px;
+        color:#fff;
+   }
+    .locationDetails p .fa{
+        margin-right: 8px;
+   }
+    .sezLocation{
+        background-color:#64A70B;
+        border-radius: 10px;
+        color: #fff;
+        padding: 4.5%;
+        margin: 10px 10px 0px 10px;
+        font-weight: 400;
+        font-family: 'Segoe UI';
+        font-size: 12px;
+   }
+    .visitingLocationDetails{
+        margin-bottom: 1.199%;
+        font-size: 14px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+   }
+    .visitingLocationDetails span{
+        font-size: 16px;
+   }
+    .meetingRoomDetails span{
+        font-size: 16px;
+   }
+    .meetingRoomDetails{
+        padding: 0 !important;
+        margin: 0 !important;
+        font-size: 14px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+   }
+    .locationDetails p{
+        padding: 10px 0px 0px 10px;
+        margin: 0 !important;
+        font-size: 17px ;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+   }
+    .profilesPresenters{
+        margin-top: 4.79%;
+        float: right;
+   }
+    .daysCount{
+        padding-bottom: 10px !important;
+        font-size: 13px !important;
+        color: #999;
+   }
+    .daysCount span{
+        color: #fff;
+        font-size: 13px !important;
+   }
+    .routingContainer{
+        border-radius:2px;
+        margin: 10px 0px 0 0px;
+        padding: 0 !important;
+   }
+    .details{
+        padding: 3px 5px 5px 5px;
+        height: 34px;
+        display: inline-block;
+        background: #f5f5f5;
+        width: auto;
+        border-radius: 25px;
+        margin-left: 10px;
+   }
+    .details.segment .detailsHeader{
+        background-color: transparent;
+        text-transform: none;
+        float: left;
+        border: none;
+        padding: 2px 10px;
+        margin: 1px 3px;
+        background: transparent;
+        font-size: 15px;
+        color: #000;
+        line-height:2.3rem;
+        max-height: 26px;
+        width: auto;
+        transition: none;
+        opacity: 1;
+   }
+    .agenda{
+        margin: 2px 7.46% 2px 3px!important;
+        text-transform: none !important;
+        // margin: 0 !important;
+        background-color: #64A70B !important;
+        border-radius: 20px !important;
+        //background: #fff !important;
+        font-weight: bold !important;
+        color: #fff !important;
+        max-height: 28px !important;
+   }
+    .dynamic{
+        color: #01677e !important;
+   }
+    .agendaList{
+        color: #000;
+        padding: 0 !important;
+        margin: 0 !important;
+   }
+    .ionItem{
+        padding:0 15px !important;
+        margin: 0 !important;
+        border-top:none !important;
+        border-bottom:1px solid #c8c7cc;
+   }
+    ion-list.agendaList:last-child .item-block{
+        border-bottom: none;
+   }
+    .list-ios{
+        border:none !important;
+   }
+    .day {
+        color: #000;
+        font-size: 17px !important;
+        font-weight: normal !important;
+        padding:10px 0px 0 0 !important;
+        border: none !important;
+   }
+    .titleTopic{
+        // padding-top: 10px;
+        color: #2d2926;
+        font-weight: 500;
+        font-size: 16px;
+        font-family: 'Segoe UI';
+        margin-bottom: 26px !important;
+   }
+    .titleTopicLunch{
+        // padding-top: 10px;
+        color: #2d2926;
+        font-weight: 500;
+        font-size: 16px;
+        font-family: 'Segoe UI';
+        margin-bottom: 15px !important;
+   }
+    .timingLunch{
+        margin: 15px 0 0 0 !important;
+        padding-bottom: 5px;
+        color: #666;
+        font-family: 'Segoe UI';
+        font-weight: 500;
+        font-size: 12px;
+        max-height: 106px;
+   }
+    .timing{
+        margin: 26px 0 0 0 !important;
+        color: #666;
+        font-family: 'Segoe UI';
+        font-weight: 500;
+        font-size: 14px;
+        max-height: 106px;
+   }
+    .confRoom{
+        color: #0099cc;
+        font-weight: lighter;
+   }
+    .lunchBreak{
+        background-color: #f5f5f5;
+        // min-height: 69px;
+        //border: none !important;
+        //padding:10px 0 0px 10px;
+        border-bottom: 0.55px solid #c8c7cc !important;
+   }
+    // COMMON AND DEFAULT CSS 
+    .scroll-content{
+        padding:0px !important;
+   }
+    .back-button.show-back-button{
+        display: none;
+   }
+    .fa{
+        font-size: 20px;
+   }
+    .details .detailsHeader.segment-activated, .details .detailsHeader.active{
+        // margin: 0px 7.46% 0px 3px!important;
+        text-transform: none;
+        line-height: 22px;
+        height: 26px;
+        background-color: #00667f;
+        border-radius: 20px;
+        color: #fff;
+        max-height: 26px;
+        transition: none;
+   }
+    .label{
+        color: #000;
+        text-align: left;
+        padding: 0 0 0 5px;
+        margin: 0;
+        max-height: 100%;
+   }
+    .inner-item{
+        border: none !important;
+   }
+    .list{
+        border: none !important;
+        margin: 0 !important;
+   }
+    .item-ios .item-block .item-inner {
+        border: none !important;
+        padding:0 !important;
+        margin: 0 !important;
+   }
+    .item-block {
+        max-width: 100% !important;
+        padding: 0;
+   }
+    .list-ios > .item-block .item-inner {
+        padding-right: 0;
+   }
+    .list-ios > .item-block:first-child {
+        border-top: none;
+   }
+    .list-ios > .item-block .label{
+        padding: 0;
+   }
+    .item-inner{
+        border: none !important;
+        // padding-bottom: 10px !important;
+   }
+    .agendaTabs{
+        height: 50px;
+        width: 100%;
+        box-shadow: 0px 0 10px 1px gainsboro;
+        border-radius: 7px 7px 0 0;
+   }
+    .agendaTabs ion-icon{
+        font-size: 17px;
+        width: 48%;
+        font-family: 'segoe UI';
+        color: #666;
+        padding: 15px 0 13px 14px;
+        border-bottom: 2px solid #fff;
+        height: 50px;
+   }
+    .agendaTabs ion-icon i.fa{
+        margin-right: 10px;
+   }
+    .agendaTabs .separator{
+        font-size: 17px;
+   }
+    .agendaTabs ion-icon.active{
+        color: #00677f;
+        font-weight: bold;
+        border-bottom: 2px solid #00677f;
+   }
+    .itinerary-container {
+        padding: 15px;
+   }
 }
-
-.container{
-    padding: 0 !important;
-    width: 94%;
-    box-shadow: 0px 0 10px 1px gainsboro;
-    border-radius: 2px;
-    margin: 10px auto;
-    border-radius: 7px;
-}
-
-.subHeader{
-    min-height: 31px;
-    min-width: 100%;
-}
-
-.button-clear{
-    font-size: 20px;
-    margin: 20px 0 !important;
-    line-height: 1;
-    color: #000;
-    font-family: 'Segoe UI';
-    font-weight: normal;
-    padding: 0px 0px 0 0 !important;
-}
-
-.button-clear i{
-    font-size: 20px;
-    margin:0 10px 0 10px;
-    color: #00677f;
-    font-weight: lighter;
-}
-
-.locationDetails{
-    background: #2b2825;
-    margin: 0px 10px;
-    border-radius: 7px;
-    font-size: 15px;
-    color:#fff;
-}
-.locationDetails p .fa{
-    margin-right: 8px;
-}
-.sezLocation{
-    background-color:#64A70B;
-    border-radius: 10px;
-    color: #fff;
-    padding: 4.5%;
-    margin: 10px 10px 0px 10px;
-   
-    font-weight: 400;
-    font-family: 'Segoe UI';
-    font-size: 12px;
-}
-.visitingLocationDetails{
-    margin-bottom: 1.199%;
-   
-}
-.visitingLocationDetails span{
-  font-size: 16px;
-}
-.meetingRoomDetails span{
-    font-size: 16px;
-}
-.meetingRoomDetails{
-    padding: 0 !important;
-    margin: 0 !important;
-}
-.locationDetails p{
-    padding: 10px 0px 0px 10px;
-    margin: 0 !important; 
-    font-size: 17px ;
-}
-.profilesPresenters{
-    margin-top: 4.79%;
-    float: right;
-}
-
-.daysCount{
-    padding-bottom: 10px !important;
-    font-size: 13px !important;
-    color: #999;
-}
-
-.daysCount span{
-    color: #fff;
-    font-size: 13px !important;
-}
-
-.routingContainer{
-    border-radius:2px;
-    margin: 10px 0px 0 0px;
-    padding: 0 !important;
- 
-
-}
-
-.details{
-    padding: 3px 5px 5px 5px;
-    height: 34px;
-    display: inline-block;
-    background: #f5f5f5;
-    width: auto;
-    border-radius: 25px;
-    margin-left: 10px;
-}
-.details.segment .detailsHeader{
-    background-color: transparent;
-    text-transform: none;
-    float: left;
-    border: none;
-    padding: 2px 10px;
-    margin: 1px 3px;
-    background: transparent;
-    font-size: 15px;
-    color: #000;
-    line-height:2.3rem;
-    max-height: 26px;
-    width: auto;
-    transition: none;
-}
-
-
-.agenda{
-    margin: 2px  7.46% 2px  3px!important;
-    text-transform: none !important;
-  //  margin: 0 !important;
-
-    background-color: #64A70B !important; 
-    border-radius: 20px !important;
-    //background: #fff !important;
-    font-weight: bold !important;
-    color: #fff !important;
-    max-height: 28px !important;
-
-}
-
-.dynamic{
-    color: #01677e !important;
-}
-
-.agendaList{
-    color: #000;
-    padding: 0 !important;
-    margin: 0 !important;
-}
-
-.ionItem{
-    padding:0 15px !important;  
-    margin: 0  !important;
-    border-top:none !important;
-    border-bottom:1px solid #c8c7cc;
-}
-ion-list.agendaList:last-child .item-block{
-    border-bottom: none;
-}
-.list-ios{
-  border:none !important;
-}
-
-.day {
-    color: #000;
-    font-size: 17px !important;
-    font-weight: normal !important;
-    padding:10px 0px 0 0 !important;
-    border: none !important;
-}
-
-
-.titleTopic{
-   // padding-top: 10px;
-    color: #2d2926;
-    font-weight: 500;
-    font-size: 16px;
-    font-family: 'Segoe UI';
-    margin-bottom: 26px !important;
-}
-.titleTopicLunch{
-    // padding-top: 10px;
-     color: #2d2926;
-     font-weight: 500;
-     font-size: 16px;
-     font-family: 'Segoe UI';
-     margin-bottom: 15px !important;
- }
-.timingLunch{
-    margin: 15px 0 0 0 !important;
-    padding-bottom: 5px;
-    color: #666;
-    font-family: 'Segoe UI';
-    font-weight: 500;
-    font-size: 12px;
-    max-height: 106px;
-}
-
-.timing{
-    margin: 26px 0 0 0 !important;
-    color: #666;
-    font-family: 'Segoe UI';
-    font-weight: 500;
-    font-size: 14px;
-    max-height: 106px;
-}
-
-
-
-.confRoom{
-    color: #0099cc;
-    font-weight: lighter;
-}
-
-.lunchBreak{
-    background-color: #f5f5f5;
-   // min-height: 69px;
-   
-    //border: none !important;
-    //padding:10px 0 0px 10px;  
-    border-bottom: 0.55px solid #c8c7cc !important;
-}
-
-// COMMON AND DEFAULT CSS //
-.scroll-content{
-    padding:0px !important;
-}
-
-.back-button.show-back-button{
- display: none;
-}
-
-.fa{
-    font-size: 20px;
-   
-}
-
-.details .detailsHeader.segment-activated,
-.details .detailsHeader.active{
-  //  margin: 0px  7.46% 0px  3px!important;
-    text-transform: none;
-    line-height: 2.3rem;
-    background-color: #00667f; 
-    border-radius: 20px;
-    color: #fff;
-    max-height: 26px;
-    transition: none;
-}
-
-.label{
-    color: #000;
-    text-align: left;
-    padding: 0 0 0 5px;
-    margin: 0;
-    max-height: 100%;
-}
-
-.inner-item{
-    border: none !important;
-}
-
-.list{
-    border: none !important;
-    margin: 0 !important;
-}
-
-.item-ios .item-block .item-inner {
-    border: none !important;
-    padding:0 !important;  
-    margin: 0 !important;
-   
-  
-}
-.item-block {
-    max-width: 100% !important;
-    padding: 0;
-}
-.list-ios > .item-block .item-inner {
-    padding-right: 0;
-}
-.list-ios > .item-block:first-child {
-    border-top: none; 
-}
-.list-ios > .item-block .label{
-    padding: 0;
-}
-.item-inner{
-    border: none !important;
-   // padding-bottom: 10px !important;
-}
-
-.agendaTabs{
-    height: 50px;
-    width: 100%;
-    box-shadow: 0px 0 10px 1px gainsboro;
-    border-radius: 7px 7px 0 0;
-}
-.agendaTabs ion-icon{
-    font-size: 17px;
-    width: 48%;
-    font-family: 'segoe UI';
-    color: #666;
-    padding: 15px 0 13px 14px;
-    border-bottom: 2px solid #fff;
-}
-.agendaTabs ion-icon i.fa{
-    margin-right: 10px;
-}
-.agendaTabs .separator{
-    font-size: 17px;
-}
-.agendaTabs ion-icon.active{
-    color: #00677f;
-    border-bottom: 2px solid #00677f;
-}
-
-}
-
