--- a/src/pages/notification/notification.scss
+++ b/src/pages/notification/notification.scss
@@ -1,61 +1,87 @@
 page-notificationModule{
-.notificationHeader{
-     padding: 16px 10px;
-     box-shadow: 0px 1px 5px rgba(170, 170, 170, 0.7);
-}
-.heading{
-    font-size: 17px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 400;
-    margin-bottom: 0;
-}
-.backArrow{
-    margin: 3px 6px 0 0;
-    float: left;
-    font-size: 20px;
-    font-weight: lighter;
-    color: #00677f;
-}
-.notificationRead {
-    margin: 4px 0 0;
-}
-.notificationTime {
-    text-align: right;
-}
-.notificationContainer {
-    margin-top: 2px;
-    overflow: hidden;
-}
-.notificationContainer ul {
-    margin: 0 10px;
-    padding-left: 0;
-    box-shadow: 0px 0 10px 1px gainsboro;
-}
-.notificationContainer li.unread {
-    background-color: #e6f2f6;
-}
-.notificationContainer li.unread .notificationContent {
-    font-weight: 400;
-}
-.notificationContainer li {
-    list-style: none;
-    padding: 15px 10px 10px 15px;
-    border-bottom: 1px solid gainsboro;
-}
-.notificationContainer li p {
-    margin-bottom: 0px;
-}
-.notificationName {
-    font-size: 12px;
-    color: #666;
-}
-.notificationContent {
-    font-size: 16px;
-    color: #2d2926;
-    font-weight: 300;
-}
-.notificationTime {
-    font-size: 12px;
-    color: #78797a
-}
+    *{
+        padding: 0;
+        margin: 0;
+        font-family: 'Segoe UI';
+   }
+    .notificationHeader{
+        padding: 16px 10px;
+        box-shadow: 0px 1px 5px rgba(170, 170, 170, 0.7);
+   }
+    .heading{
+        font-size: 17px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 400;
+        margin-bottom: 0;
+   }
+    .backArrow{
+        margin: 5px 6px 0 0;
+        float: left;
+        font-size: 17px;
+        font-weight: lighter;
+        color: #00677f;
+        
+   }
+    .notificationRead {
+        margin: 4px 0 0;
+   }
+    .notificationTime {
+        text-align: right;
+   }
+    .notificationContainer {
+        margin-top: 2px;
+        overflow: hidden;
+   }
+    .notificationContainer ul {
+        margin: 0 10px;
+        padding-left: 0;
+        box-shadow: 0px 0 10px 1px gainsboro;
+   }
+    .notificationContainer li.unread  {
+        background-color: #e6f2f6;
+      
+        
+   }
+   .notificationContainer li.unread p  {
+   color: #000;
+   }  
+    
+   .notificationContainer li.read p  {
+    color: #888888 !important;
+    }
+   
+    .notificationContainer li {
+        list-style: none;
+        padding: 15px;
+        border-bottom: 1px solid gainsboro;
+   }
+    .notificationContainer li p {
+        margin-bottom: 0px;
+    
+   }
+    .notificationContainer .all-notificaitons-read li {
+        background-color: #fff;
+    }
+    .notificationName {
+        font-size: 15px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        width: 74%;
+   }
+    .notificationContent {
+        font-size: 17px;
+        font-weight: 500;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        float: none;
+        clear: both;
+   }
+    .notificationTime {
+        font-size: 14px;
+        width: 26%;
+      color: #888 !important;
+        
+   }
 }
