--- a/src/pages/rootModule/rootModule.scss
+++ b/src/pages/rootModule/rootModule.scss
@@ -1,4 +1,9 @@
 page-rootmodule{
+    *{
+        padding: 0;
+        margin: 0;
+        font-family: 'Segoe UI';
+   }
     .popOverDisplay .label{
         width: 245px !important;
         color: #2d2926 !important;
@@ -9,49 +14,47 @@ page-rootmodule{
         border: 0 !important;
         font-weight: bold !important;
         padding: 0 !important;
-        }
-    .list  {
+   }
+    .list {
         //padding: 2.5px 0 !important;
         font-size: 15px;
-        color: #2d2926 !important;
-        margin:  0 !important;
+        color: #00667f;
+      
+        margin: 0 !important;
         border: 0 !important;
-        height: 44px !important;
+        height: 43px !important;
         border-bottom: 0.55px solid gainsboro !important;
-    }
+   }
     .popover-content{
         width: 245px !important;
-       // min-height: 245px !important;
+        // min-height: 245px !important;
         //padding: 0 !important;
-        
-    } 
-    
+   }
     .log-out{
-    
-       padding-left: 20px !important;
+        padding-left: 20px !important;
         padding-right: 20px !important;
         color: #00667f;
-        font-size: 17px;
-        padding-top: 13px; 
-    }
+        font-size: 21px;
+        padding-top: 10px;
+   }
     .icon{
         padding-left: 20px !important;
         padding-right: 20px !important;
         color: #00667f;
-        font-size: 17px;
-        padding-top: 14px;
-    }
-    
+        font-size: 21px;
+        padding-top: 10px;
+   }
     .managerName{
-    font-family: 'Segoe UI' !important;
-    font-size: 13px !important;
-    color: #808080 !important;
-    font-weight: 400 !important;
-    border-bottom: 0.55px solid #808080 !important;
-    background-color: #f5f5f5;
-    min-height: 38px !important;
-    padding: 14px 0 10px 20px !important;
-    }
-    
-    }
-    
+        font-family: 'Segoe UI' !important;
+        font-size: 15px !important;
+        color: #000 !important;
+        font-weight: 400 !important;
+        border-bottom: 0.55px solid #808080 !important;
+        background-color: #f5f5f5;
+        min-height: 38px !important;
+        padding: 12px 0 10px 20px !important;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+   }
+}
